[package]
name = "todolist"
version = "0.1.1"
edition = "2018"
license-file = "LICENSE"
description = "Rust library to manage todo list"
readme = "README.md"
documentation = "https://docs.rs/todolist/"
exclude = ["/.github", ".releaserc.yml"]

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
once_cell = "1.8.0"
